--- a/public/css/level2/game_style.css
+++ b/public/css/level2/game_style.css
@@ -43,7 +43,7 @@ body{
 
 .container {
     display: flex;
-    height: calc(100% - 74px);
+    /* height: calc(100% - 74px); */
     width: 100%;
     align-items: center;
     justify-content: center;
